--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "description": "Update helper",
     "type": "composer-plugin",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Kyle",
@@ -14,7 +16,7 @@
         "composer-plugin-api": "^1.1.0"
     },
     "require-dev": {
-        "composer/composer": "^2.0.x-dev",
+        "composer/composer": "2.0.x-dev || ^2.0.0-dev",
         "phpunit/phpunit": ">=4.8.35 <6.0",
         "codeclimate/php-test-reporter": "dev-master"
     },
