--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,13 @@ cache:
 
 sudo: false
 
+env:
+  global:
+    - setup=basic
+
 install:
-  - travis_retry composer update --prefer-dist --no-interaction --no-suggest
+  - if [[ $setup = 'nightly'  ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest --ignore-platform-reqs; fi
+  - if [[ $setup = 'basic'  ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest; fi
 
 script:
   - vendor/bin/phpunit --verbose --coverage-clover=coverage.xml --coverage-text
@@ -19,7 +24,7 @@ after_success:
 matrix:
   include:
     - php: '5.3'
-      dist: trusty
+      dist: precise
     - php: '5.4'
       dist: trusty
     - php: '5.5'
@@ -30,3 +35,4 @@ matrix:
     - php: '7.2'
     - php: '7.3'
     - php: nightly
+      end: setup=nightly
