--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,6 @@ matrix:
     - php: '7.1'
     - php: '7.2'
     - php: '7.3'
+      end: coverage=true
     - php: nightly
       end: setup=nightly
