--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "composer-plugin-api": "^1.1.0"
+        "composer-plugin-api": "^1.1.0 || ^2.0.0"
     },
     "require-dev": {
         "composer/composer": "2.0.x-dev || ^2.0.0-dev",
